charts/pluto-backend/files/envoy.yaml
# charts/pluto-backend/files/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/api/" }
                          route: { cluster: manifest_service, timeout: 0s }
                        - match: { path: "/health" }
                          route: { cluster: manifest_service, timeout: 0s }
                        - match: { path: "/manifest.yaml" }
                          route: { cluster: swagger_ui, timeout: 0s }
                        - match: { prefix: "/" }
                          route: { cluster: swagger_ui, timeout: 0s }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"

  clusters:
    - name: manifest_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: manifest_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: pluto-pluto-backend-manifest
                      port_value: 8080

    - name: swagger_ui
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: swagger_ui
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: pluto-pluto-backend-swaggerui
                      port_value: 8081

admin:
  access_log_path: "/tmp/envoy_admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
